--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 8</title>
-    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Homework 10</title>
   </head>
   <body>
-    <ul>
-      <li><a href="01-gallery.html">Image gallery</a></li>
-      <li><a href="02-video.html">Video playback</a></li>
-      <li><a href="03-feedback.html">Feedback form</a></li>
-    </ul>
+    <h1 class="title">Search of the country</h1>
+      
+    <input type="text" id="search-box"/>
 
-    <script type = "module" defer src = "index.js"></script>
+    <ul class="country-list"></ul>
+      
+    <div class="country-info"></div>
+
+    <script src="../src/js/index.js"></script>
   </body>
 </html>
